tg-chflags.diff: Fix and add f?chflags prototype.
svn path=/glibc-package/trunk/; revision=5268

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   * control/{main,libc}: Remove libpthread-stubs-dev dependency on hurd-i386.
   * patches/hurd-i386/libpthread.diff: Add -lrt in libpthread.a to fix static
     linking.
+  * patches/hurd-i386/tg-chflags.diff: Fix and add f?chflags prototype.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4286 (from glibc-bsd).
