* patches/kfreebsd/local-use-thr-primitives.diff: bump LinuxThreads     version.  Closes: #675606.
svn path=/glibc-package/trunk/; revision=5271

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,8 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
     decimal_point and thousands_sep.  Closes: #673339.
   * patches/any/local-sunrpc-dos.diff: fix a DoS in RPC implementation
     (CVE-2011-4609).  Closes: #671478.
+  * patches/kfreebsd/local-use-thr-primitives.diff: bump LinuxThreads 
+    version.  Closes: #675606.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
