--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,8 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
     (CVE-2011-4609).  Closes: #671478.
   * patches/kfreebsd/local-use-thr-primitives.diff: bump LinuxThreads 
     version.  Closes: #675606.
+  * Take-over nsswitch.conf installation from base-files.  Closes: 
+    #673271.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
