* Set libc*-dev "Multi-Arch: same". Add conflicts betwwen libc*-dev     packages. Move a.out.h and ieee754.h to the arch qualified path.     Thanks to Thibaut Girka for the help.  Closes: #666760.
svn path=/glibc-package/trunk/; revision=5275

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,9 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
     version.  Closes: #675606.
   * Take-over nsswitch.conf installation from base-files.  Closes: 
     #673271.
+  * Set libc*-dev "Multi-Arch: same". Add conflicts betwwen libc*-dev
+    packages. Move a.out.h and ieee754.h to the arch qualified path.
+    Thanks to Thibaut Girka for the help.  Closes: #666760.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
