Upload to unstable
svn path=/glibc-package/trunk/; revision=5280

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-33) UNRELEASED; urgency=medium
+eglibc (2.13-33) unstable; urgency=medium
 
   [ Clint Adams ]
   * patches/localedata/cvs-rupeesign.diff: use new rupee symbol
@@ -65,7 +65,7 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   * Refresh all patches to loose the "diff --git" headers.  Closes: 
     #673933.
 
- -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jun 2012 21:38:54 +0200
 
 eglibc (2.13-32) unstable; urgency=medium
 
