--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-34) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jun 2012 22:51:53 +0200
+
 eglibc (2.13-33) unstable; urgency=medium
 
   [ Clint Adams ]
