--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 eglibc (2.13-34) UNRELEASED; urgency=low
 
-  * 
+  [ Aurelien Jarno ]
+  * patches/any/cvs-pthread-builtin-expect.diff: new patch from upstream to
+    use __builtin_expect in public headers only on GCC compilers.  Closes:
+    #674412.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jun 2012 22:51:53 +0200
 
