* patches/hurd-i386/libpthread_librt-link.diff: Remove patch, having     libpthread bringing librt also brings issues.   * patches/hurd-i386/libpthread_nort.diff: Add patch to revert upstream librt     usage.
svn path=/glibc-package/trunk/; revision=5284

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,12 @@ eglibc (2.13-34) UNRELEASED; urgency=low
     use __builtin_expect in public headers only on GCC compilers.  Closes:
     #674412.
 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/libpthread_librt-link.diff: Remove patch, having
+    libpthread bringing librt also brings issues.
+  * patches/hurd-i386/libpthread_nort.diff: Add patch to revert upstream librt
+    usage.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jun 2012 22:51:53 +0200
 
 eglibc (2.13-33) unstable; urgency=medium
