* patches/localedata/submitted-es_MX-decimal_point.diff: fix thousand     separator, use a space instead of a comma.
svn path=/glibc-package/trunk/; revision=5285

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ eglibc (2.13-34) UNRELEASED; urgency=low
   * patches/any/cvs-pthread-builtin-expect.diff: new patch from upstream to
     use __builtin_expect in public headers only on GCC compilers.  Closes:
     #674412.
+  * patches/localedata/submitted-es_MX-decimal_point.diff: fix thousand
+    separator, use a space instead of a comma.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_librt-link.diff: Remove patch, having
