New hurd-only patch to comment AF_LINK values, unimplemented on the Hurd.
svn path=/glibc-package/trunk/; revision=5289

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ eglibc (2.13-34) UNRELEASED; urgency=low
     libpthread bringing librt also brings issues.
   * patches/hurd-i386/libpthread_nort.diff: Add patch to revert upstream librt
     usage.
+  * patches/hurd-i386/submitted-AF_LINK.diff: New hurd-only patch to comment
+    AF_LINK values, unimplemented on the Hurd.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jun 2012 22:51:53 +0200
 
