--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,7 @@ eglibc (2.13-34) UNRELEASED; urgency=low
   * patches/hurd-i386/libpthread_nort.diff: Add patch to revert upstream librt
     usage.
   * patches/hurd-i386/submitted-AF_LINK.diff: New hurd-only patch to comment
-    AF_LINK values, unimplemented on the Hurd.
+    AF_LINK values, unimplemented on the Hurd (Closes: #678358).
   * patches/hurd-i386/unsubmitted-mremap.diff: New hurd-only patch to comment
     MREMAP flags, unimplemented on the Hurd.
 
