--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ eglibc (2.13-34) UNRELEASED; urgency=low
     usage.
   * patches/hurd-i386/submitted-AF_LINK.diff: New hurd-only patch to comment
     AF_LINK values, unimplemented on the Hurd (Closes: #678358).
+  * patches/hurd-i386/unsubmitted-mremap.diff: New hurd-only patch to comment
+    MREMAP flags, unimplemented on the Hurd.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jun 2012 22:51:53 +0200
 
