* Update Slovak debconf translation, by Ivan Masár.  Closes: #677919.
svn path=/glibc-package/trunk/; revision=5295

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ eglibc (2.13-34) UNRELEASED; urgency=low
     #674412.
   * patches/localedata/submitted-es_MX-decimal_point.diff: fix thousand
     separator, use a space instead of a comma.
+  * Update Slovak debconf translation, by Ivan Masár.  Closes: #677919.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_librt-link.diff: Remove patch, having
