* control.in/main: switch multiarch-support to priority: required.  Closes:     #677624.
svn path=/glibc-package/trunk/; revision=5296

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.13-34) UNRELEASED; urgency=low
   * patches/localedata/submitted-es_MX-decimal_point.diff: fix thousand
     separator, use a space instead of a comma.
   * Update Slovak debconf translation, by Ivan Masár.  Closes: #677919.
+  * control.in/main: switch multiarch-support to priority: required.  Closes:
+    #677624.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_librt-link.diff: Remove patch, having
