* patches/arm/unsubmitted-ldconfig-cache-abi.diff: fix MIPS n64 support     broken by unsubmitted armhf patch. Sigh.
svn path=/glibc-package/trunk/; revision=5300

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+eglibc (2.13-35) UNRELEASED; urgency=low
+
+  [ Aurelien Jarno ]
+  * patches/arm/unsubmitted-ldconfig-cache-abi.diff: fix MIPS n64 support
+    broken by unsubmitted armhf patch. Sigh.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 04 Jul 2012 23:26:09 +0200
+
 eglibc (2.13-34) unstable; urgency=low
 
   [ Aurelien Jarno ]
