--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 eglibc (2.13-35) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
-  * patches/arm/unsubmitted-ldconfig-cache-abi.diff: fix MIPS n64 support
-    broken by unsubmitted armhf patch. Sigh.
+  * patches/arm/unsubmitted-ldconfig-cache-abi.diff: disable, as it will 
+    conflict with upstream x32 support.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 04 Jul 2012 23:26:09 +0200
 
