fixup kfreebsd/local-use-thr-primitives.diff. Closes: #681113.
svn path=/glibc-package/trunk/; revision=5302

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ eglibc (2.13-35) UNRELEASED; urgency=low
   * patches/arm/unsubmitted-ldconfig-cache-abi.diff: disable, as it will 
     conflict with upstream x32 support.
 
+  [ Petr Salinger ]
+  * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #681113.
+
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 04 Jul 2012 23:26:09 +0200
 
 eglibc (2.13-34) unstable; urgency=low
