* Update Czech debconf translation, by Miroslav Kure.  Closes: #681708.
svn path=/glibc-package/trunk/; revision=5303

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ eglibc (2.13-35) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * patches/arm/unsubmitted-ldconfig-cache-abi.diff: disable, as it will 
     conflict with upstream x32 support.
+  * Update Czech debconf translation, by Miroslav Kure.  Closes: #681708.
 
   [ Petr Salinger ]
   * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #681113.
