--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: glibc\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2009-06-27 09:58+0200\n"
+"PO-Revision-Date: 2012-07-15 20:40+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "Language: cs\n"
@@ -221,7 +221,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr ""
+msgstr "Restartovat služby při aktualizaci balíku bez ptaní?"
 
 #. Type: boolean
 #. Description
@@ -235,3 +235,9 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"V systému jsou nainstalovány služby, které je nutno při aktualizaci "
+"určitých knihoven (libpam, libc nebo libssl) restartovat. Během restartu "
+"služeb jsou tyto po nějakou dobu nedostupné. Abychom předešli nechtěné "
+"nedostupnosti, je při každé aktualizaci nabídnut seznam služeb, které se "
+"mají restartovat. Povolíte-li tuto možnost, budou se všechny potřebné "
+"služby restartovat při aktualizaci knihoven automaticky bez ptaní."
