* local/manpages/ld.so.8: fix LD_VERBOSE description after manpage     rework.  Closes: #681688.
svn path=/glibc-package/trunk/; revision=5304

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ eglibc (2.13-35) UNRELEASED; urgency=low
   * patches/arm/unsubmitted-ldconfig-cache-abi.diff: disable, as it will 
     conflict with upstream x32 support.
   * Update Czech debconf translation, by Miroslav Kure.  Closes: #681708.
+  * local/manpages/ld.so.8: fix LD_VERBOSE description after manpage
+    rework.  Closes: #681688.
 
   [ Petr Salinger ]
   * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #681113.
