Changelog entry for the last revision
svn path=/glibc-package/branches/eglibc-2.16/; revision=5333

--- a/debian/changelog
+++ b/debian/changelog
@@ -350,6 +350,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
     we've reached a consensus about bootstrapping this into the archive.
   * Version gcc-4.7 build-deps to get a version that works for eglibc.
   * debian/sysdeps/*: clean up use of CC and CXX to match wookey's fixes.
+  * debian/control.in/libc: Update nscd/locales breaks to (<< 2.16)
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
