--- a/debian/changelog
+++ b/debian/changelog
@@ -351,6 +351,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * Version gcc-4.7 build-deps to get a version that works for eglibc.
   * debian/sysdeps/*: clean up use of CC and CXX to match wookey's fixes.
   * debian/control.in/libc: Update nscd/locales breaks to (<< 2.16)
+  * debian/rules: Unset CFLAGS and friends and use the package versions.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
