Port over ldconfig trigger support from Ubuntu packages
svn path=/glibc-package/branches/eglibc-2.16/; revision=5338

--- a/debian/changelog
+++ b/debian/changelog
@@ -352,6 +352,8 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * debian/sysdeps/*: clean up use of CC and CXX to match wookey's fixes.
   * debian/control.in/libc: Update nscd/locales breaks to (<< 2.16)
   * debian/rules: Unset CFLAGS and friends and use the package versions.
+  * Move ldconfig to ldconfig.real, install ldconfig wrapper, and set up
+    a dpkg trigger for libc-bin to avoid excessive calls to ldconfig
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
