Don't build nscd during when doing a bootstrap DEB_BUILD_PROFILE
svn path=/glibc-package/branches/eglibc-2.16/; revision=5339

--- a/debian/changelog
+++ b/debian/changelog
@@ -354,6 +354,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * debian/rules: Unset CFLAGS and friends and use the package versions.
   * Move ldconfig to ldconfig.real, install ldconfig wrapper, and set up
     a dpkg trigger for libc-bin to avoid excessive calls to ldconfig
+  * Don't build nscd during when doing a bootstrap DEB_BUILD_PROFILE
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
