--- a/debian/changelog
+++ b/debian/changelog
@@ -355,6 +355,8 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * Move ldconfig to ldconfig.real, install ldconfig wrapper, and set up
     a dpkg trigger for libc-bin to avoid excessive calls to ldconfig
   * Don't build nscd during when doing a bootstrap DEB_BUILD_PROFILE
+  * Make our DEB_BUILD_PROFILE=bootstrap support look more like Ubuntu's
+    previously known-working DEB_STAGE=stage1 support for the time being.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
