Sync support for armel/armhf biarch packages, but keep it disabled
svn path=/glibc-package/branches/eglibc-2.16/; revision=5343

--- a/debian/changelog
+++ b/debian/changelog
@@ -359,6 +359,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
     previously known-working DEB_STAGE=stage1 support for the time being.
   * debian/rules.d/build.mk: If WITH_SYSROOT is passed to debian/rules,
     then pass --with-headers=$(WITH_SYSROOT)/$(includedir) to the build.
+  * Sync support for armel/armhf biarch packages, but keep it disabled.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
