Adjust libc.posinst and libc.preinst service restart code for 2.16.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5345

--- a/debian/changelog
+++ b/debian/changelog
@@ -360,6 +360,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * debian/rules.d/build.mk: If WITH_SYSROOT is passed to debian/rules,
     then pass --with-headers=$(WITH_SYSROOT)/$(includedir) to the build.
   * Sync support for armel/armhf biarch packages, but keep it disabled.
+  * Adjust libc.posinst and libc.preinst service restart code for 2.16.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
