--- a/debian/changelog
+++ b/debian/changelog
@@ -364,6 +364,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * Merge regression/progression test suite improvements from Ubuntu.
   * debian/patches/any/local-CVE-2012-3406.diff: switch to malloc when
     array grows too large to handle via alloca extension (CVE-2012-3406)
+  * Provide backward compatibility for DEB_STAGE->DEB_BUILD_PROFILE.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
