Add bug refs for arm64 and x32
svn path=/glibc-package/branches/eglibc-2.16/; revision=5359

--- a/debian/changelog
+++ b/debian/changelog
@@ -286,7 +286,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
     dependent.
   
   [ Daniel Schepler ]
-  * Add x32 support.
+  * Add x32 support (Closes: #667023):
     - debian/control.in/main: Build-Depend on g++-4.7-multilib on amd64,
       i386, x32.
     - debian/control.in/libc: Add Replaces: libc6-x32 to libc6 on x32.
@@ -325,7 +325,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
     under debian/ that weren't getting removed.
 
   [ Wookey ]
-  * Add arm64 support:
+  * Add arm64 support (Closes: #690873):
     - debian/patches/all/unsubmitted-autoconfupdate.diff: Update autotools
       config.sub and config.guess to detect aarch64/arm64 correctly
     - debian/patches/arm64/submitted-aarch64-support.diff: Massive backport
