Remove debian/patches/any/cvs-strtod-overflow.diff, merged upstream
svn path=/glibc-package/branches/eglibc-2.16/; revision=5360

--- a/debian/changelog
+++ b/debian/changelog
@@ -210,7 +210,7 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
     - Remove patches/any/cvs-vfprintf-many-format-strings.diff (merged
       upstream).
     - Remove patches/any/cvs-arch-lowlevellock.diff (merged upstream).
-    - Update patches/any/cvs-strtod-overflow.diff. 
+    - Remove patches/any/cvs-strtod-overflow.diff (merged upstream).
   * Add patches/any/local-revert-fclose-posix2008.diff to fix issues with
     Ruby.
   * Add patches/amd64/local-pthread_cond_wait.diff from Jeff Law to fix
