* patches/any/cvs-vfprintf-binary.diff: new patch from upstream to     print incomplete multibyte characters without complaint with %.<num>s.     Closes: #208308.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5372

--- a/debian/changelog
+++ b/debian/changelog
@@ -374,6 +374,11 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * Don't run the x32 testsuite on i386/amd64, buildds may lack support.
   * Fix some ln calls in sysdeps/{amd64,i386} for binary-arch idempotence.
 
+  [ Jonathan Nieder ]
+  * patches/any/cvs-vfprintf-binary.diff: new patch from upstream to
+    print incomplete multibyte characters without complaint with %.<num>s.
+    Closes: #208308.
+ 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Jul 2012 23:45:58 +0200
 
 eglibc (2.13-36) unstable; urgency=low
