patches/arm/local-vfp-sysdeps.diff: Force the Tag_ABI_HardFP_use and Tag_ABI_VFP_args EABI tags when building for armhf, so compilers only linking crti.o will generate what appear to be armhf binaries.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5377

--- a/debian/changelog
+++ b/debian/changelog
@@ -363,6 +363,9 @@ eglibc (2.16-0experimental0) EXPERIMENTAL; urgency=low
   * Adjust libc.posinst and libc.preinst service restart code for 2.16.
   * Merge regression/progression test suite improvements from Ubuntu.
   * Provide backward compatibility for DEB_STAGE->DEB_BUILD_PROFILE.
+  * patches/arm/local-vfp-sysdeps.diff: Force the Tag_ABI_HardFP_use
+    and Tag_ABI_VFP_args EABI tags when building for armhf, so compilers
+    only linking crti.o will generate what appear to be armhf binaries.
 
   [ Matthias Klose ]
   * Add patches/any/local-revert-bz13979.diff: revert a commit that made
