Apply patches from Pino Toscano to fix build on Hurd
svn path=/glibc-package/branches/eglibc-2.16/; revision=5383

--- a/debian/changelog
+++ b/debian/changelog
@@ -373,7 +373,23 @@ eglibc (2.16-0experimental0) experimental; urgency=low
     have optimisations turned on.  This breaks some unclever AC macros.
   * Fix building x32 multilib libraries, by correctly passing -mx32.
   * Fix some ln calls in sysdeps/{amd64,i386} for binary-arch idempotence.
- 
+
+  [ Pino Toscano ]
+  * Update patches/hurd-i386/submitted-AF_LINK.diff.
+  * Add patches/hurd-i386/tg-verify.h.diff,
+    patches/hurd-i386/tg-pagesize.diff,
+    patches/hurd-i386/tg-fcntl-internal.h.diff, 
+    patches/hurd-i386/local-disable-sendmmsg.diff,
+    patches/hurd-i386/cvs-add-missing-includes.diff,
+    and patches/hurd-i386/submitted-libpthread-elf.diff to fix build on Hurd.
+  * Drop obsolete patches patches/hurd-i386/tg-__i686_defined.diff and
+    patches/hurd-i386/unsubmitted-gcc-4.1-init-first.diff
+  * Add patches/hurd-i386/cvs-mach-check-local-headers.sh.diff to
+    reduce false header errors from the check-local-headers.out test.
+  * Update testsuite-checking/expected-results-i686-gnu-i386,
+    testsuite-checking/expected-results-i686-gnu-xen,
+    testsuite-checking/expected-results-i486-gnu-libc and
+    testsuite-checking/expected-results-i686-gnu-i686.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 18 Nov 2012 21:19:10 +0100
 
