* patches/svn-updates.diff: update from upstream SVN.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5384

--- a/debian/changelog
+++ b/debian/changelog
@@ -282,6 +282,7 @@ eglibc (2.16-0experimental0) experimental; urgency=low
   * patches/any/local-disable-libnss-db.diff: disable libnss-db as the format
     is not compatible with the libnss-db package, and is architecture
     dependent.
+  * patches/svn-updates.diff: update from upstream SVN.
   
   [ Daniel Schepler ]
   * Add x32 support (Closes: #667023):
