* debian/patches/arm/cvs-ldconfig-cache-abi.diff: Backport upstream   patch to re-enable ldconfig cache tagging for armhf binaries again. * debian/patches/arm64/cvs-ldconfig-cache-abi.diff: Same for aarch64. * debian/patches/arm/unsubmitted-ldconfig-cache-abi.diff: Re-enable   and adjust to account for changes in cvs-ldconfig-cache-abi.diff. * debian/debhelper.in/libc.preinst: Remove old ld.so.cache on upgrade.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5391

--- a/debian/changelog
+++ b/debian/changelog
@@ -367,6 +367,12 @@ eglibc (2.16-0experimental0) experimental; urgency=low
   * patches/arm/local-vfp-sysdeps.diff: Force the Tag_ABI_HardFP_use
     and Tag_ABI_VFP_args EABI tags when building for armhf, so compilers
     only linking crti.o will generate what appear to be armhf binaries.
+  * debian/patches/arm/cvs-ldconfig-cache-abi.diff: Backport upstream
+    patch to re-enable ldconfig cache tagging for armhf binaries again.
+  * debian/patches/arm64/cvs-ldconfig-cache-abi.diff: Same for aarch64.
+  * debian/patches/arm/unsubmitted-ldconfig-cache-abi.diff: Re-enable
+    and adjust to account for changes in cvs-ldconfig-cache-abi.diff.
+  * debian/debhelper.in/libc.preinst: Remove old ld.so.cache on upgrade.
 
   [ Matthias Klose ]
   * Add patches/any/local-revert-bz13979.diff: revert a commit that made
