Add more hurd patches from Pino Toscano
svn path=/glibc-package/branches/eglibc-2.16/; revision=5392

--- a/debian/changelog
+++ b/debian/changelog
@@ -393,12 +393,17 @@ eglibc (2.16-0experimental0) experimental; urgency=low
     patches/hurd-i386/unsubmitted-gcc-4.1-init-first.diff
   * Add patches/hurd-i386/cvs-mach-check-local-headers.sh.diff to
     reduce false header errors from the check-local-headers.out test.
+  * Add patches/hurd-i386/cvs-llistxattr.diff,
+    patches/hurd-i386/cvs-renameat.diff and 
+    patches/hurd-i386/cvs-lremovexattr.diff to implement llistxattr, 
+    lremovexattr and renameat.
+    Add patches/hurd-i386/cvs-mknodat.diff to fix tst-mknodat.
   * Update testsuite-checking/expected-results-i686-gnu-i386,
     testsuite-checking/expected-results-i686-gnu-xen,
     testsuite-checking/expected-results-i486-gnu-libc and
     testsuite-checking/expected-results-i686-gnu-i686.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Nov 2012 00:06:19 +0000
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Nov 2012 00:06:19 +0100
 
 eglibc (2.13-37) unstable; urgency=low
 
