New changelog entry
svn path=/glibc-package/branches/eglibc-2.16/; revision=5393

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.16-0experimental1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Nov 2012 11:37:11 +0100
+
 eglibc (2.16-0experimental0) experimental; urgency=low
 
   [ Aurelien Jarno ]
@@ -403,7 +409,7 @@ eglibc (2.16-0experimental0) experimental; urgency=low
     testsuite-checking/expected-results-i486-gnu-libc and
     testsuite-checking/expected-results-i686-gnu-i686.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Nov 2012 00:06:19 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Nov 2012 08:48:56 +0100
 
 eglibc (2.13-37) unstable; urgency=low
 
