* Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall     with 5 or 6 arguments.  Closes: #693852.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5394

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.16-0experimental1) UNRELEASED; urgency=low
 
-  * 
+  [ Aurelien Jarno ]
+  * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
+    with 5 or 6 arguments.  Closes: #693852.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Nov 2012 11:37:11 +0100
 
