Update testsuite-checking/expected-results-i686-gnu-xen and testsuite-checking/expected-results-i686-gnu-i686.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5397

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-eglibc (2.16-0experimental1) UNRELEASED; urgency=low
+eglibc (2.16-0experimental2) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
     with 5 or 6 arguments.  Closes: #693852.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Nov 2012 11:37:11 +0100
+  [ Pino Toscano ]
+  * Update testsuite-checking/expected-results-i686-gnu-xen and
+    testsuite-checking/expected-results-i686-gnu-i686.
+
+ -- Samuel Thibault <sthibault@debian.org>  Fri, 23 Nov 2012 02:14:42 +0100
 
 eglibc (2.16-0experimental0) experimental; urgency=low
 
