Add patches/hurd-i386/local-ulimit.diff to use Linux' ulimit on hurd-i386 instead of the bogus BSD version. Fix expected-results-i486-gnu-libc, expected-results-i686-gnu-i386, expected-results-i686-gnu-i686, expected-results-i686-gnu-xen accordingly.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5399

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ eglibc (2.16-0experimental1) UNRELEASED; urgency=low
   [ Pino Toscano ]
   * Update testsuite-checking/expected-results-i686-gnu-xen and
     testsuite-checking/expected-results-i686-gnu-i686.
+  * Add patches/hurd-i386/local-ulimit.diff to use Linux' ulimit on hurd-i386
+    instead of the bogus BSD version. Fix expected-results-i486-gnu-libc,
+    expected-results-i686-gnu-i386, expected-results-i686-gnu-i686,
+    expected-results-i686-gnu-xen accordingly.
 
  -- Samuel Thibault <sthibault@debian.org>  Fri, 23 Nov 2012 02:14:42 +0100
 
