Add patches/any/cvs-cxxheaders-detection[1-3].diff to bring us up to date with my C++ header detection patch on glibc trunk, for g++-4.7_4.7.2-10.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5400

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 eglibc (2.16-0experimental1) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
+  * Add patches/any/cvs-cxxheaders-detection[1-3].diff to bring us up to date
+    with my C++ header detection patch on glibc trunk, for g++-4.7_4.7.2-10.
+
   [ Aurelien Jarno ]
   * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
     with 5 or 6 arguments.  Closes: #693852.
