Add patches/powerpc/submitted-UAPI_ASM_POWERPC_ELF.diff to fix builds on PowerPC against linux headers from 3.7-rc.  Remove if fixed for 3.7-final.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5401

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ eglibc (2.16-0experimental1) UNRELEASED; urgency=low
   [ Adam Conrad ]
   * Add patches/any/cvs-cxxheaders-detection[1-3].diff to bring us up to date
     with my C++ header detection patch on glibc trunk, for g++-4.7_4.7.2-10.
+  * Add patches/powerpc/submitted-UAPI_ASM_POWERPC_ELF.diff to fix builds on
+    PowerPC against linux headers from 3.7-rc.  Remove if fixed for 3.7-final.
 
   [ Aurelien Jarno ]
   * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
