* debian/sysdeps/{amd64,i386}.mk: Enable and bootstrap x32 multilib builds. * debian/control.in/main: Bump g++4.7 build-dep to 4.7.2-11 for x32 builds.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5402

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ eglibc (2.16-0experimental1) UNRELEASED; urgency=low
     with my C++ header detection patch on glibc trunk, for g++-4.7_4.7.2-10.
   * Add patches/powerpc/submitted-UAPI_ASM_POWERPC_ELF.diff to fix builds on
     PowerPC against linux headers from 3.7-rc.  Remove if fixed for 3.7-final.
+  * debian/sysdeps/{amd64,i386}.mk: Enable and bootstrap x32 multilib builds.
+  * debian/control.in/main: Bump g++4.7 build-dep to 4.7.2-11 for x32 builds.
 
   [ Aurelien Jarno ]
   * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
