debian/{tests,control.in/main}: Add simple autopkgtest rebuild testcase.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5403

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ eglibc (2.16-0experimental1) UNRELEASED; urgency=low
     PowerPC against linux headers from 3.7-rc.  Remove if fixed for 3.7-final.
   * debian/sysdeps/{amd64,i386}.mk: Enable and bootstrap x32 multilib builds.
   * debian/control.in/main: Bump g++4.7 build-dep to 4.7.2-11 for x32 builds.
+  * debian/{tests,control.in/main}: Add simple autopkgtest rebuild testcase.
 
   [ Aurelien Jarno ]
   * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
