* debian/control.in/main: Bump linux-libc-dev build-dep for alt x32 builds. *
svn path=/glibc-package/branches/eglibc-2.16/; revision=5404

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.16-0experimental1) UNRELEASED; urgency=low
+eglibc (2.16-0experimental1ubuntu1) UNRELEASED; urgency=low
 
   [ Adam Conrad ]
   * Add patches/any/cvs-cxxheaders-detection[1-3].diff to bring us up to date
@@ -7,6 +7,7 @@ eglibc (2.16-0experimental1) UNRELEASED; urgency=low
     PowerPC against linux headers from 3.7-rc.  Remove if fixed for 3.7-final.
   * debian/sysdeps/{amd64,i386}.mk: Enable and bootstrap x32 multilib builds.
   * debian/control.in/main: Bump g++4.7 build-dep to 4.7.2-11 for x32 builds.
+  * debian/control.in/main: Bump linux-libc-dev build-dep for alt x32 builds.
   * debian/{tests,control.in/main}: Add simple autopkgtest rebuild testcase.
 
   [ Aurelien Jarno ]
@@ -21,7 +22,10 @@ eglibc (2.16-0experimental1) UNRELEASED; urgency=low
     expected-results-i686-gnu-i386, expected-results-i686-gnu-i686,
     expected-results-i686-gnu-xen accordingly.
 
- -- Samuel Thibault <sthibault@debian.org>  Fri, 23 Nov 2012 02:14:42 +0100
+  [ Adam Conrad ]
+  * 
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Nov 2012 01:18:07 -0700
 
 eglibc (2.16-0experimental0) experimental; urgency=low
 
