--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.16-0experimental1ubuntu1) UNRELEASED; urgency=low
+eglibc (2.16-0experimental1) experimental; urgency=low
 
   [ Adam Conrad ]
   * Add patches/any/cvs-cxxheaders-detection[1-3].diff to bring us up to date
@@ -22,10 +22,7 @@ eglibc (2.16-0experimental1ubuntu1) UNRELEASED; urgency=low
     expected-results-i686-gnu-i386, expected-results-i686-gnu-i686,
     expected-results-i686-gnu-xen accordingly.
 
-  [ Adam Conrad ]
-  * 
-
- -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Nov 2012 01:18:07 -0700
+ -- Adam Conrad <adconrad@0c3.net>  Sun, 25 Nov 2012 01:18:07 -0700
 
 eglibc (2.16-0experimental0) experimental; urgency=low
 
