* debian/rules: don't force the GCC version for BUILD_CC and BUILD_CXX.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5409

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ eglibc (2.16-0experimental1) experimental; urgency=low
   [ Aurelien Jarno ]
   * Add patches/m68k/cvs-syscall-arguments.diff to fix cancellable syscall
     with 5 or 6 arguments.  Closes: #693852.
+  * debian/rules: don't force the GCC version for BUILD_CC and BUILD_CXX. 
 
   [ Pino Toscano ]
   * Update testsuite-checking/expected-results-i686-gnu-xen and
