* debian/testsuite-checking/compare.sh: accept the build directory as an     argument.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5410

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ eglibc (2.16-0experimental1) experimental; urgency=low
     instead of the bogus BSD version. Fix expected-results-i486-gnu-libc,
     expected-results-i686-gnu-i386, expected-results-i686-gnu-i686,
     expected-results-i686-gnu-xen accordingly.
+  * debian/testsuite-checking/compare.sh: accept the build directory as an
+    argument.
 
  -- Adam Conrad <adconrad@0c3.net>  Sun, 25 Nov 2012 01:18:07 -0700
 
