--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ eglibc (2.16-0experimental1) experimental; urgency=low
     with my C++ header detection patch on glibc trunk, for g++-4.7_4.7.2-10.
   * Add patches/powerpc/submitted-UAPI_ASM_POWERPC_ELF.diff to fix builds on
     PowerPC against linux headers from 3.7-rc.  Remove if fixed for 3.7-final.
+  * debian/debhelper.in/libc-dev-alt.{preinst,postinst}: Do the directory to
+    symlink migration in postinst, which solves issues with dpkg following
+    the new symlink on unpack and removing all the "old" (now new) files.
+  * debian/rules.d/debhelper.mk: Add a MULTIARCHDIR subst for the above.
   * debian/sysdeps/{amd64,i386}.mk: Enable and bootstrap x32 multilib builds.
   * debian/control.in/main: Bump g++4.7 build-dep to 4.7.2-11 for x32 builds.
   * debian/control.in/main: Bump linux-libc-dev build-dep for alt x32 builds.
