patches/any/local-tst-eintr1-eagain.diff: new patch to work around a race that lets pthread_create hit resource limits when the kernel takes too long to clean up after joined threads.  (closes: #673596)
svn path=/glibc-package/branches/eglibc-2.16/; revision=5417

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,11 @@ eglibc (2.16-0experimental1) experimental; urgency=low
   * debian/testsuite-checking/compare.sh: accept the build directory as an
     argument.
 
+  [ Jonathan Nieder ]
+  * patches/any/local-tst-eintr1-eagain.diff: new patch to work around
+    a race that lets pthread_create hit resource limits when the kernel
+    takes too long to clean up after joined threads.  (closes: #673596)
+
  -- Adam Conrad <adconrad@0c3.net>  Sun, 25 Nov 2012 01:18:07 -0700
 
 eglibc (2.16-0experimental0) experimental; urgency=low
