New changelog entry
svn path=/glibc-package/branches/eglibc-2.16/; revision=5418

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.16-0experimental2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Mon, 26 Nov 2012 02:20:40 -0700
+
 eglibc (2.16-0experimental1) experimental; urgency=low
 
   [ Adam Conrad ]
