--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 eglibc (2.16-0experimental2) UNRELEASED; urgency=low
 
-  * 
+  * debian/sysdeps/{amd64,i386}.mk: Fix rtlddir for x32 alternate builds.
 
- -- Adam Conrad <adconrad@ubuntu.com>  Mon, 26 Nov 2012 02:20:40 -0700
+ -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
 eglibc (2.16-0experimental1) experimental; urgency=low
 
