debian/sysdeps/{armel,armhf}.mk: Merge multilib configs from Ubuntu.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5422

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.16-0experimental2) UNRELEASED; urgency=low
 
   * debian/sysdeps/{amd64,i386}.mk: Fix rtlddir for x32 alternate builds.
+  * debian/sysdeps/{armel,armhf}.mk: Merge multilib configs from Ubuntu.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
