--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,8 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     - patches/any/local-revert-fclose-posix2008.diff: Reverted upstream.
     - patches/any/local-sunrpc-dos.diff: Dropped, different fix upstream.
     - patches/any/cvs-cxxheaders-detection[123].diff: Merged upstream.
+  * debian/patches/powerpc/submitted-UAPI_ASM_POWERPC_ELF.diff: Remove, 
+    as this has been fixed in the 3.7 release and 3.8 kernel headers.
   * debian/sysdeps/{amd64,i386}.mk: Fix rtlddir for x32 alternate builds.
   * debian/sysdeps/{armel,armhf}.mk: Merge multilib configs from Ubuntu.
 
